package com.neptune.neptune.ui.navigation

object NavigationTestTags {
  const val BOTTOM_NAVIGATION_MENU = "BottomNavigationMenu"
  const val GO_BACK_BUTTON = "GoBackButton"
  const val TOP_BAR = "TopBar"
  const val TOP_BAR_TITLE = "TopBarTitle"
  const val MAIN_TAB = "MainTab"
  const val PROJECTLIST_TAB = "ProjectListTab"
  const val SEARCH_TAB = "SearchTab"
  const val SELECT_MESSAGES_TAB = "SelectMessages"
  const val OTHER_USER = "OtherUser"
  const val PROFILE_BUTTON = "ProfileButton"

  const val MESSAGE_BUTTON = "MessageButton"
}
